# turtlebot_k2_exploration_3d

./: CMakeLists.txt  README.md  package.xml  turtlebot_exploration_3d.kdev4
launch/: 3dsensor.launch  turtlebot_gmapping.launch
launch/includes/3dsensor/: kinect2.launch.xml
launch/move/: costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base.launch.xml  move_base_params.yaml  trajectoryPlannerROS_local_planner_param.yaml
src/: navigation_utils.cpp  scan_to_pcl.cpp  turtlebot_exploration_3d.cpp
